fixed styling and mocked more data

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,22 +6,19 @@
     <title>Risk Assessment</title>
   </head>
   <body>
+    
     <div id="app"></div>
-    <!-- <div id="map"></div>
-    <script>
-// Initialize and add the map
-function initMap() {
-  // The location of Uluru
-  var uluru = {lat: -25.344, lng: 131.036};
-  // The map, centered at Uluru
-  var map = new google.maps.Map(
-      document.getElementById('map'), {zoom: 4, center: uluru});
-  // The marker, positioned at Uluru
-  var marker = new google.maps.Marker({position: uluru, map: map});
-}
-    </script>
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_Eq2me4Sgq1Ky03MDCWbA7YpKbshfm4E&callback=initMap">
-    </script> -->
+
+    <div class="navbar">
+      <a href="#home">Home</a>
+      <a href="#GitHub">GitHub</a>
+      <a href="#Our Mission">Our Mission</a>
+    </div>
+
+    <!-- <div id="logo"></div> -->
+    <!-- <img src="logo" alt="logo!"> -->
+
+    
+
   </body>
 </html>
