--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,19 +6,13 @@
     <title>Risk Assessment</title>
   </head>
   <body>
-    
+
+
     <div id="app"></div>
 
     <div class="navbar">
-      <a href="#home">Home</a>
-      <a href="#GitHub">GitHub</a>
+      <a href="https://github.com/esfrankel/crisis_predictor">GitHub</a>
       <a href="#Our Mission">Our Mission</a>
     </div>
-
-    <!-- <div id="logo"></div> -->
-    <!-- <img src="logo" alt="logo!"> -->
-
-    
-
   </body>
 </html>
