Fixed styling, need to fix search

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,11 +6,9 @@
     <title>Risk Assessment</title>
   </head>
   <body>
-
-
     <div id="app"></div>
-
     <div class="navbar">
+      <a href="index.html">conflict.io</a>
       <a href="https://github.com/esfrankel/crisis_predictor">GitHub</a>
       <a href="#Our Mission">Our Mission</a>
     </div>
