--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
   <body>
     <div id="app"></div>
     <div class="navbar">
-      <a href="index.html">conflict.io</a>
+      <a href="index.html">peace.io</a>
       <a href="https://github.com/esfrankel/crisis_predictor">GitHub</a>
       <a href="#Our Mission">Our Mission</a>
     </div>
